# ab-testing

./: README.md  pyproject.toml
data/: ab_test_data.csv  generate_mock_data.py
src/: ab_test.py  ab_test_example.ipynb
